--- a/src/CSS/Header.css
+++ b/src/CSS/Header.css
@@ -24,3 +24,9 @@ ul li:hover{
     color: #02191D;
     font-weight: bolder;
 }
+
+@media screen and (max-width: 500px) {
+    ul li{
+        display: none;
+    }
+}
