--- a/src/CSS/SecondFormPage.css
+++ b/src/CSS/SecondFormPage.css
@@ -46,6 +46,9 @@
     gap: 32px;
     margin-top: 32px;
 }
+input[type=file]{
+    display: none;
+}
 input{
     padding: 12px;
     background-color: transparent;
@@ -86,4 +89,34 @@ textarea{
     align-items: center;
     gap: 20px;
     margin-top: 20px;
+}
+
+
+@media screen and (max-width:500px) {
+    .form-container-wrapper{
+        border: none;
+        background-color: #08252B;
+        width: 300px;
+    }
+    .image-background{
+        background-color: #08252B;
+    }
+    .drag-and-drop{
+        right: 10%;
+        bottom: 20%;
+        width: 200px;
+        height: 200px;
+    }
+    .drag-and-drop p{
+        margin: 80px auto;
+    }
+    .second-form-button{
+        flex-direction: column;
+    }
+    .back-btn{
+        padding: 12px 108px;
+    }
+    .get-btn{
+        padding: 12px 70px;
+    }
 }
