--- a/src/index.css
+++ b/src/index.css
@@ -10,3 +10,11 @@ body{
   margin-right: 120px;
   margin-top: 24px;
 }
+
+
+@media screen and (max-width: 500px) {
+  body{
+    margin-left: 60px;
+    margin-right: 60px;
+  }
+}
