--- a/src/CSS/SecondFormPage.css
+++ b/src/CSS/SecondFormPage.css
@@ -96,7 +96,8 @@ textarea{
     .form-container-wrapper{
         border: none;
         background-color: #08252B;
-        width: 300px;
+        width: 250px;
+        padding: 16px;
     }
     .image-background{
         background-color: #08252B;
@@ -104,19 +105,19 @@ textarea{
     .drag-and-drop{
         right: 10%;
         bottom: 20%;
-        width: 200px;
-        height: 200px;
+        width: 180px;
+        height: 180px;
     }
     .drag-and-drop p{
-        margin: 80px auto;
+        margin: 60px auto;
     }
     .second-form-button{
         flex-direction: column;
     }
     .back-btn{
-        padding: 12px 108px;
+        padding: 12px 90px;
     }
     .get-btn{
-        padding: 12px 70px;
+        padding: 12px 50px;
     }
 }
