--- a/src/CSS/FirstFormPage.css
+++ b/src/CSS/FirstFormPage.css
@@ -118,11 +118,16 @@ select:focus{
     gap: 20px;
     margin-top: 20px;
 }
-
+.error {
+    color: red;
+    font-size: 0.875em;
+    display: block;
+    margin-top: 5px;
+  }
 
 @media screen and (max-width: 500px) {
     .form-container{
-        width: 300px;
+        width: 350px;
         padding: 20px;
     }
     .form-heading{
@@ -160,15 +165,15 @@ select:focus{
         flex-direction: column;
     }
     .card{
-        width: 200px;
+        width: 240px;
     }
     .form-buttons{
         flex-direction: column;
     }
     .cancel-btn{
-        padding: 12px 90px;
+        padding: 12px 110px;
     }
     .next-btn{
-        padding: 12px 100px;
+        padding: 12px 120px;
     }
 }
