--- a/src/CSS/LastFormPage.css
+++ b/src/CSS/LastFormPage.css
@@ -54,6 +54,18 @@
     height: 600px;
     width: 300px;
 }
+.bar-code{
+    width: 250px;
+    position: absolute;
+    bottom: -47%;
+    right: 41%;
+}
+.barcode{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 0;
+}
 .ticket-contents{
     display: flex;
     flex-direction: column;
@@ -135,5 +147,10 @@ span{
     }
     .info span{
         font-size: 12px;
+    }
+    .bar-code{
+        width: 220px;
+        bottom: -42%;
+        right: 26%;
     }
 }
