--- a/src/CSS/SecondFormPage.css
+++ b/src/CSS/SecondFormPage.css
@@ -12,6 +12,18 @@
     margin-top: 50px;
     margin-bottom: 50px;
 }
+.line2{
+    margin-top: 20px;
+    margin-bottom: 20px;
+    width: 100%;
+    height: 4px;
+    border-radius: 4px;
+    background: linear-gradient(
+      to right,
+      #24A0B5 50%, 
+      #0E464F 50%  
+    )
+}
 img{
     width:  100%;
     height: 100%;
