--- a/src/CSS/FirstFormPage.css
+++ b/src/CSS/FirstFormPage.css
@@ -7,7 +7,7 @@
     width: 700px;
 }
 h3{
-    font-size: 32px;
+    font-size: 26px;
 }
 .form-heading{
     display: flex;
@@ -34,6 +34,9 @@ h3{
       ),
       rgba(10, 12, 17, 0.1);
 }
+/* .h3{
+    font-family: "JejuMyeongjo";
+} */
 
 hr{
     border: 2px solid #0E464F;
@@ -41,8 +44,8 @@ hr{
 
 .h2-txt{
     text-align: center;
-    font-size: 46px;
-    font-family: "JejuMyeongjo";
+    font-size: 62px;
+    font-family: "Road Rage";
 }
 .p-txtt{
     text-align: center;
