--- a/src/index.css
+++ b/src/index.css
@@ -1,24 +1,31 @@
-@font-face {
+/* @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+
+@import url("https://db.onlinewebfonts.com/c/1a5c2d8bbd4e28d99a6efcbb9a5b378f?family=JejuMyeongjo"); */
+/* @font-face {
   font-family: "JejuMyeongjo";
   src: url("Assets\Images\Fonts\JejuMyeongjo\jejumyeongjo\JejuMyeongjo-Regular.ttf");
-}
-*{
+} */
+@import url('https://fonts.googleapis.com/css2?family=Jeju+Myeongjo&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Alatsi&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nanum+Myeongjo&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Road+Rage&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+* {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: "JejuMyeongjo";
+  /* font-family: "JejuMyeongjo"; */
+  font-family: "roboto";
 }
-body{
-  background-color: #02191D;
+body {
+  background-color: #02191d;
   color: white;
   margin-left: 120px;
   margin-right: 120px;
   margin-top: 24px;
 }
 
-
 @media screen and (max-width: 500px) {
-  body{
+  body {
     margin-left: 20px;
     margin-right: 20px;
   }
